# Prompt_security_dashboard

./: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
pkg/: package.json  rust_security_service.d.ts  rust_security_service.js
rust-security-service/: Cargo.toml
rust-security-service/pkg/: package.json  rust_security_service.d.ts  rust_security_service.js  rust_security_service_bg.js  rust_security_service_bg.wasm  rust_security_service_bg.wasm.d.ts
rust-security-service/src/: lib.rs
src/: middleware-functions.ts
src/app/: layout.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/security/: page.tsx
src/app/api/admin/: route.ts
src/app/api/admin/2fa-login/: route.ts
src/app/api/admin/block-ip/: route.ts
src/app/api/admin/check/: route.ts
src/app/api/admin/cleanup-logs/: route.ts
src/app/api/admin/clear-rate-limit/: route.ts
src/app/api/admin/email-otp/: route.ts
src/app/api/admin/log-database/: route.ts
src/app/api/admin/logs/: route.ts
src/app/api/admin/logs/view/: route.ts
src/app/api/admin/test-database/: route.ts
src/app/api/admin/test-request/: route.ts
src/app/api/admin/test-upload/: route.ts
src/app/api/admin/trigger-audit/: route.ts
src/components/: AdminAuthCheck.tsx
src/lib/: admin-auth.ts  behavioral-detection.ts  emailOTP.ts  enhanced-auth.ts  security-logger.ts  security.ts
