[package]
name = "rust-security-service"
version = "0.1.0"
edition = "2021"
description = "Hardened Rust WASM Security Module for Next.js"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 'z'      # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
strip = true
